<resources>

    <string name="app_name">FreeHanddDrawing</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_drawing">DrawingActivity</string>
    <string name="large">Large</string>
    <string name="middle">medium</string>
    <string name="Small">Small</string>
    <string name="select_bg_color">Select Background color</string>
    <string name="select_drawing_color">Select Drawing Color</string>

</resources>